dmsdk-android/2.2.1/常见问题.md
# 常见问题

## 通用

### 什么时机需要主动触发刷票？

&emsp;&emsp;1.&emsp;APP启动后，在判断已经登录的情况下；
&emsp;&emsp;2.&emsp;从APP生成并给设备传递ClientId之前；
&emsp;&emsp;3.&emsp;APP调用需要校验票据的接口前。

### 云端绑定有何作用？

云端绑定可以作为服务请求合法性校验的一个重要维度，可为APP提供设备绑定、解绑、绑定关系查询等管理能力，并为推送功能做好基础。

### 我在Javadoc中找不到TVSWebController的类文档？

在2.2.0版本开始，DMSDK的Web模块被独立出来，成为[WebView SDK](https://dingdang.qq.com/doc/page/303)。因此原来Web模块的文档现已迁移到[WebViewSDK的Javadoc文档](https://tencentdingdang.github.io/WebViewSDK/android/latest-redirect.html)中。请查阅[迁移指南](/doc/page/308)了解更多信息。

## QQ音乐授权

### 授权页面提示“服务器开小差”或“授权失败”要如何定位原因？

首先开启TVSWebView中页面的调试模式：

```java
mTVSWebController.setEnableDebugFlag(true);
```

之后再加载页面，会在页面右下方显示小齿轮，表示调试模式开启。调试模式下，“服务器开小差”的提示会更加详细。

而通过TVSWebView的ProxyData接口，可以收到授权失败的错误码和错误信息，请查阅DM SDK的[QQ音乐授权接入指南的《获取授权结果通知》小节](/doc/page/345)。错误码可以参考[错误码列表](https://tencentdingdang.github.io/dmsdk/android/2.2.1/javadoc/com/tencent/ai/tvs/tskm/thirdpartyauth/CpAuthError.html)。

### 为什么在QQ音乐中没有弹出授权界面、授权后没有跳回我的应用？

请先确认：

* 已经按照接入文档正确完成接入
* 手机的QQ音乐应用已经更新到最新版本

查阅日志，如果在ProxyData中能够看到错误码，请根据错误码针对性修改；如果不能，则可能是QQ音乐SDK的问题，请在复现后进入QQ音乐应用 - “我的”页面 - 右上角汉堡菜单进入设置 - “帮助与反馈” - 右上角“发日志”，等待日志上传后，将问题描述、上传成功的截图提交给我们跟进。