dmsdk-android/2.3.0/常见问题.md
# 常见问题

## 通用

### 什么时机需要主动触发刷票？

&emsp;&emsp;1.&emsp;APP启动后，在判断已经登录的情况下；
&emsp;&emsp;2.&emsp;从APP生成并给设备传递ClientId之前；
&emsp;&emsp;3.&emsp;APP调用需要校验票据的接口前。

### 云端绑定有何作用？

云端绑定可以作为服务请求合法性校验的一个重要维度，可为APP提供设备绑定、解绑、绑定关系查询等管理能力，并为推送功能做好基础。

### 我在Javadoc中找不到TVSWebController的类文档？

在2.2.0版本开始，DMSDK的Web模块被独立出来，成为[WebView SDK](https://dingdang.qq.com/doc/page/303)。因此原来Web模块的文档现已迁移到[WebViewSDK的Javadoc文档](https://tencentdingdang.github.io/WebViewSDK/android/latest-redirect.html)中。请查阅[迁移指南](/doc/page/347)了解更多信息。

## QQ音乐授权

### 授权页面提示“服务器开小差”或“授权失败”要如何定位原因？

首先开启TVSWebView中页面的调试模式：

```java
mTVSWebController.setEnableDebugFlag(true);
```

之后再加载页面，会在页面右下方显示小齿轮，表示调试模式开启。调试模式下，“服务器开小差”的提示会更加详细。

而通过TVSWebView的ProxyData接口，可以收到授权失败的错误码和错误信息，请查阅DM SDK的[QQ音乐授权接入指南的《获取授权结果通知》小节](/doc/page/345)。错误码可以参考[错误码列表](https://tencentdingdang.github.io/dmsdk/android/2.2.1/javadoc/com/tencent/ai/tvs/tskm/thirdpartyauth/CpAuthError.html)。

### 魅族等部分机型始终授权失败，错误码3？

Android平台的QQ音乐授权的流程中包含bindService的步骤，但部分机型的后台拉活策略比较严格，限制了对该API的调用，导致应用无法和QQ音乐通信，目前无法解决该问题。已知魅族、努比亚设备上存在该问题。

如果您对该问题还有更多疑问，请直接联系QQ音乐。

### OPPO、VIVO等部分机型QQ音乐不在后台时首次点击“去授权”会失败，第二次才能拉起？

Android平台的QQ音乐授权的流程中包含bindService的步骤，但部分机型的后台拉活策略比较严格，首次调用会失败，需要尝试拉活后再重试，根据[QQ音乐提供的接入文档说明](http://open.y.qq.com/OpenID/index.html#4.2%20%E9%9B%86%E6%88%90%E6%B5%81%E7%A8%8B)，我们在[旧版demo的AuthAgent实现](https://github.com/TencentDingdang/dmsdk/blob/3eca6c16825eccc83002ccb0a27a410f26dec27b/demo/Android/TVSLogin/app/src/main/java/com/tencent/yunxiaowei/dmsdk/cpaa/qqmusic/QQMusicAuthAgent.java)中加入了100ms后重试的逻辑：

```java
if (!mContext.bindService(intent, mServiceConnection, Context.BIND_AUTO_CREATE)) {
    if (retry) {
        // 此处尝试拉活，并延迟100ms后重新尝试bindService
        CommonCmd.startQQMusicProcess(mContext, PN_QQ_MUSIC);
        mUiHandler.postDelayed(() -> bindServiceIfNeeded(false), 100);
    } else {
        onFailure(CpAuthError.FAILED_TO_CONNECT_TO_APP, "绑定QQ音乐后台服务失败");
    }
}
```

100ms是QQ音乐提供的经验值，而在部分机型上，该时长在部分设备上过短，导致重试失败。

我们对市面上的部分头部机型进行测试后，优化了该重试策略，改为最多重试4次的方式，您可以参考我们[优化后的实现](https://github.com/TencentDingdang/dmsdk/blob/e39c2ed037acb135224dc970ee63094595f57225/demo/Android/TVSLogin/app/src/main/java/com/tencent/yunxiaowei/dmsdk/cpaa/qqmusic/QQMusicAuthAgent.java)：

```java
/**
 * 尝试绑定QQ音乐后台服务，若失败会多次重试。
 * @param retry 当前重试次数，第1次是100ms后，第2次是200ms后，第3次是300ms后，第4次是500ms后，第4次失败则返回失败。
 */
private void bindServiceIfNeeded(int retry) {
    DMLog.i(TAG, "bindServiceIfNeeded: retry = " + retry);
    if (mBound) {
        initSdkIfNeeded();
        return;
    }
    Intent intent = new Intent("com.tencent.qqmusic.third.api.QQMusicApiService");
    intent.setPackage(PN_QQ_MUSIC);
    if (!mContext.bindService(intent, mServiceConnection, Context.BIND_AUTO_CREATE)) {
        if (retry < 4) {
            DMLog.i(TAG, "bindServiceIfNeeded: Failed on retry #" + retry);
            CommonCmd.startQQMusicProcess(mContext, PN_QQ_MUSIC);
            mUiHandler.postDelayed(() -> bindServiceIfNeeded(retry + 1), BIND_SERVICE_RETRY_INTERVALS[retry]);
        } else {
            onFailure(CpAuthError.FAILED_TO_CONNECT_TO_APP, "绑定QQ音乐后台服务失败");
        }
    }
}
```

如果您对该问题还有更多疑问，请直接联系QQ音乐。

### 为什么在QQ音乐中没有弹出授权界面、授权后没有跳回我的应用？

请先确认：

* 已经按照接入文档正确完成接入
* 手机的QQ音乐应用已经更新到最新版本

查阅日志，如果在ProxyData中能够看到错误码，请根据错误码针对性修改；如果不能，则可能是QQ音乐SDK的问题，请在复现后进入QQ音乐应用 - “我的”页面 - 右上角汉堡菜单进入设置 - “帮助与反馈” - 右上角“发日志”，等待日志上传后，将问题描述、上传成功的截图提交给我们跟进。